adicionando PUT no swagger
